Fix checkbox spacing and add new styles for buttons and prices

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,11 @@ body{
   background-color: #F1FADA;
 }
 
+div.hidden {
+  display: none;
+}
+
+
 #platos {
 display: flex;
 flex-wrap: wrap;
@@ -110,5 +115,27 @@ justify-content: center;
       color: white;
       cursor: pointer;
     }
+    .btnFavorito {
+      background-color: #DAB70A;
+      padding: 15px 40px;
+      border-radius: 20px;
+      border: solid white 5px;
+      font-size: 30px;
+      font-weight: bold;
+      color: white;
+     text-shadow: 3px 2px 2px black;
+     box-shadow: 3px 2px 2px black;
+      transition: 0.2s;
+      cursor: pointer;
+    }
+    .btnFavorito:hover {
+      background-color: #BBA11D;
+    
+    }
+   .Price {
+    text-shadow: 3px 2px 2px black;
+    font-size: 30px;
+    margin-bottom: 10px;
+   }
 
   }
